--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,15 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8" />
-  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>Dapp Yield Farming Decentralized Bank</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="reset.css">
+  <title>DApp</title>
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <script crossorigin src="http://foo.bar/particles.json"></script>
   <div id="root"></div>
 </body>
 
